# ADXL-with-Pi-Pico

./: ADXL335.c  CMakeLists.txt  README.md
